--- a/FeatureExtraction/test.ipynb
+++ b/FeatureExtraction/test.ipynb
@@ -111,21 +111,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'speech_pretraining'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\LAYLAR~1\\AppData\\Local\\Temp/ipykernel_23376/3301054397.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcp_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'../../pretrained/wav2vec_large.pt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcfg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfairseq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheckpoint_utils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_model_ensemble_and_task\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcp_path\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.conda\\envs\\emotion2\\lib\\site-packages\\fairseq\\checkpoint_utils.py\u001b[0m in \u001b[0;36mload_model_ensemble_and_task\u001b[1;34m(filenames, arg_overrides, task, strict, suffix, num_shards)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m def load_model_ensemble_and_task(\n\u001b[1;32m--> 279\u001b[1;33m     \u001b[0mfilenames\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    280\u001b[0m     \u001b[0marg_overrides\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mDict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAny\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[0mtask\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.conda\\envs\\emotion2\\lib\\site-packages\\fairseq\\checkpoint_utils.py\u001b[0m in \u001b[0;36mload_checkpoint_to_cpu\u001b[1;34m(path, arg_overrides)\u001b[0m\n\u001b[0;32m    230\u001b[0m     \u001b[1;34m\"\"\"Loads a checkpoint to CPU (with upgrading for backward compatibility).\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    231\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPathManager\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_local_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 232\u001b[1;33m         \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_location\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"cpu\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    233\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    234\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m\"args\"\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstate\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"args\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marg_overrides\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.conda\\envs\\emotion2\\lib\\site-packages\\fairseq\\checkpoint_utils.py\u001b[0m in \u001b[0;36m_upgrade_state_dict\u001b[1;34m(state)\u001b[0m\n\u001b[0;32m    432\u001b[0m         state[\"optimizer_history\"] = [\n\u001b[0;32m    433\u001b[0m             \u001b[1;33m{\u001b[0m\u001b[1;34m\"criterion_name\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m\"CrossEntropyCriterion\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"best_loss\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"best_loss\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 434\u001b[1;33m         ]\n\u001b[0m\u001b[0;32m    435\u001b[0m         \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"last_optimizer_state\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"optimizer\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    436\u001b[0m         \u001b[1;32mdel\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"optimizer\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'speech_pretraining'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-16 14:45:03 | INFO | fairseq.models.wav2vec.wav2vec | Wav2VecModel(\n",
+      "  (feature_extractor): ConvFeatureExtractionModel(\n",
+      "    (conv_layers): ModuleList(\n",
+      "      (0): Sequential(\n",
+      "        (0): Conv1d(1, 512, kernel_size=(10,), stride=(5,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (1): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(8,), stride=(4,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (2): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(4,), stride=(2,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (3): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(4,), stride=(2,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (4): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(4,), stride=(2,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (5): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(1,), stride=(1,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "      (6): Sequential(\n",
+      "        (0): Conv1d(512, 512, kernel_size=(1,), stride=(1,), bias=False)\n",
+      "        (1): Dropout(p=0.0, inplace=False)\n",
+      "        (2): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (3): ReLU()\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (feature_aggregator): ConvAggegator(\n",
+      "    (conv_layers): Sequential(\n",
+      "      (0): Sequential(\n",
+      "        (0): ReplicationPad1d((1, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(2,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (1): Sequential(\n",
+      "        (0): ReplicationPad1d((2, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(3,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (2): Sequential(\n",
+      "        (0): ReplicationPad1d((3, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(4,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (3): Sequential(\n",
+      "        (0): ReplicationPad1d((4, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(5,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (4): Sequential(\n",
+      "        (0): ReplicationPad1d((5, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(6,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (5): Sequential(\n",
+      "        (0): ReplicationPad1d((6, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(7,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (6): Sequential(\n",
+      "        (0): ReplicationPad1d((7, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(8,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (7): Sequential(\n",
+      "        (0): ReplicationPad1d((8, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(9,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (8): Sequential(\n",
+      "        (0): ReplicationPad1d((9, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(10,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (9): Sequential(\n",
+      "        (0): ReplicationPad1d((10, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(11,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (10): Sequential(\n",
+      "        (0): ReplicationPad1d((11, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(12,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "      (11): Sequential(\n",
+      "        (0): ReplicationPad1d((12, 0))\n",
+      "        (1): Conv1d(512, 512, kernel_size=(13,), stride=(1,))\n",
+      "        (2): Dropout(p=0.0, inplace=False)\n",
+      "        (3): Fp32GroupNorm(1, 512, eps=1e-05, affine=True)\n",
+      "        (4): ReLU()\n",
+      "      )\n",
+      "    )\n",
+      "    (residual_proj): ModuleList(\n",
+      "      (0): None\n",
+      "      (1): None\n",
+      "      (2): None\n",
+      "      (3): None\n",
+      "      (4): None\n",
+      "      (5): None\n",
+      "      (6): None\n",
+      "      (7): None\n",
+      "      (8): None\n",
+      "      (9): None\n",
+      "      (10): None\n",
+      "      (11): None\n",
+      "    )\n",
+      "  )\n",
+      "  (wav2vec_predictions): Wav2VecPredictionsModel(\n",
+      "    (project_to_steps): ConvTranspose2d(512, 512, kernel_size=(1, 12), stride=(1, 1))\n",
+      "    (dropout): Dropout(p=0.0, inplace=False)\n",
+      "  )\n",
+      "  (dropout_feats): Dropout(p=0.0, inplace=False)\n",
+      "  (dropout_agg): Dropout(p=0.0, inplace=False)\n",
+      ")\n"
      ]
     }
    ],
@@ -133,7 +281,7 @@
     "import torch\n",
     "import fairseq\n",
     "\n",
-    "cp_path = '../../pretrained/wav2vec_large.pt'\n",
+    "cp_path = '../../model/wav2vec_large.pt'\n",
     "model, cfg, task = fairseq.checkpoint_utils.load_model_ensemble_and_task([cp_path])\n",
     "model = model[0]\n",
     "model.eval()\n",
