--- a/FeatureExtraction/test.ipynb
+++ b/FeatureExtraction/test.ipynb
@@ -290,6 +290,14 @@
     "z = model.feature_extractor(wav_input_16khz)\n",
     "c = model.feature_aggregator(z)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract features using official example\n",
+    "PYTHONPATH /path/to/fairseq python examples/wav2vec/wav2vec_featurize.py --input /path/to/task/waves --output /path/to/output \\ --model /model/path/checkpoint_best.pt --split train valid test"
+   ]
   }
  ],
  "metadata": {
